--- a/style.css
+++ b/style.css
@@ -70,9 +70,27 @@
 }
 
 .product-heading-text span{
-    background-color: blueviolet;
+    background-color: #fff;
     position: relative;
     padding: 0px 20px;
     display: inline-block;
+    z-index: 2;
+}
+
+.product-heading-text::before{
+    content:'';
+    width: 100%;
+    height: 1px;
+    background-color: #770015;
+    position: absolute;
+    top: 28px;
+    left: 0%;
+}
+
+/*----------------Product Card-------------*/
+
+.main-product-card{
+    width: 100%;
+    height: 100%;
 }
 
