--- a/style.css
+++ b/style.css
@@ -31,12 +31,16 @@
     height: 632px;
 }
 
-.main-circle{
-    align-items: center;
-}
+/*--------- Product Section -----------*/
 
 .product{
     padding: 68px 0px 0px 0px;
+}
+
+.product-circle img {
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
 }
 
 .product-circle{
@@ -44,6 +48,10 @@
     width: 170px;
     border-radius: 50%;
     background: antiquewhite;
+}
+
+.main-circle{
+    align-items: center;
 }
 
 .product-text{
@@ -94,3 +102,91 @@
     height: 100%;
 }
 
+.tranding-card{
+    height: 416px;
+    position: relative;
+    overflow: hidden;
+}
+
+.tranding-card-svg{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+}
+
+.tranding-card img{
+    height: 100%;
+    width: 100%;
+}
+
+.social-container{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #00000038;
+    backdrop-filter: blur(5px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: translateX(-100%);
+    transition: 0.5s;
+}
+
+.tranding-card:hover .social-container{
+    transform: translateX(0);
+    left: initial;
+}
+
+.product-carts{
+    width: 54px;
+    height: 54px;
+    background-color: #FFFFFF;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.social-image img{
+    height: 100%;
+    width: 100%;
+}
+
+.tranding-product-text{
+    font-size: 14px;
+    font-weight: 400;
+    color: #1C1C1C;
+    text-align: center;
+    padding: 10px 45px;
+}
+
+.price-text{
+    font-size: 20px;
+    font-weight: 900;
+    color: #1F1F1F;
+}
+
+.discount-price-text{
+    color: #ff0000;
+    font-size: 11px;
+    text-decoration: line-through;
+}
+
+.main-size-box{
+    display: flex;
+    justify-content:space-between;
+    padding: 0px 20px;
+}
+
+.size-box{
+    height: 36px;
+    width: 36px;
+    font-weight: 400;
+    border: 1px solid #E6E6E6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
